[workspace]
resolver = "2"
members = [
  # utilities
  "any_spawner",
  "const_str_slice_concat",
  "either_of",
  "next_tuple",
  "oco",
  "or_poisoned",

  # core
  "hydration_context",
  "leptos",
  "leptos_dom",
  "leptos_config",
  "leptos_hot_reload",
  "leptos_macro",
  "leptos_server",
  "reactive_graph",
  "reactive_stores",
  "reactive_stores_macro",
  "server_fn",
  "server_fn_macro",
  "server_fn/server_fn_macro_default",
  "tachys",

  # integrations
  "integrations/actix",
  "integrations/axum",
  "integrations/utils",

  # libraries
  "meta",
  "router",
  "router_macro",
  "any_error",
]
exclude = ["benchmarks", "examples", "projects"]

[workspace.package]
edition = "2021"
rust-version = "1.88"

[workspace.dependencies]
# members
throw_error = { path = "./any_error/", version = "0.3.1" }
any_spawner = { path = "./any_spawner/", version = "0.3.0" }
const_str_slice_concat = { path = "./const_str_slice_concat", version = "0.1" }
either_of = { path = "./either_of/", version = "0.1.6" }
hydration_context = { path = "./hydration_context", version = "0.3.0" }
leptos = { path = "./leptos", version = "0.8.16" }
leptos_config = { path = "./leptos_config", version = "0.8.9" }
leptos_dom = { path = "./leptos_dom", version = "0.8.8" }
leptos_hot_reload = { path = "./leptos_hot_reload", version = "0.8.6" }
leptos_integration_utils = { path = "./integrations/utils", version = "0.8.8" }
leptos_macro = { path = "./leptos_macro", version = "0.8.15" }
leptos_router = { path = "./router", version = "0.8.12" }
leptos_router_macro = { path = "./router_macro", version = "0.8.6" }
leptos_server = { path = "./leptos_server", version = "0.8.7" }
leptos_meta = { path = "./meta", version = "0.8.6" }
next_tuple = { path = "./next_tuple", version = "0.1.0" }
oco_ref = { path = "./oco", version = "0.2.1" }
or_poisoned = { path = "./or_poisoned", version = "0.1.0" }
reactive_graph = { path = "./reactive_graph", version = "0.2.13" }
reactive_stores = { path = "./reactive_stores", version = "0.4.1" }
reactive_stores_macro = { path = "./reactive_stores_macro", version = "0.4.0" }
server_fn = { path = "./server_fn", version = "0.8.10" }
server_fn_macro = { path = "./server_fn_macro", version = "0.8.9" }
server_fn_macro_default = { path = "./server_fn/server_fn_macro_default", version = "0.8.5" }
tachys = { path = "./tachys", version = "0.2.12" }

# members deps
async-once-cell = { default-features = false, version = "0.5" }
itertools = { default-features = false, version = "0.14" }
convert_case = { default-features = false, version = "0.11" }
convert_case_extras = { default-features = false, version = "0.2" }
serde_json = { default-features = false, version = "1.0" }
trybuild = { default-features = false, version = "1.0" }
typed-builder = { default-features = false, version = "0.23" }
typed-builder-macro = { default-features = false, version = "0.23" }
thiserror = { default-features = false, version = "2.0" }
wasm-bindgen = { default-features = false, version = "0.2" }
indexmap = { default-features = false, version = "2.13" }
rstml = { default-features = false, version = "0.12" }
rustc_version = { default-features = false, version = "0.4" }
guardian = { default-features = false, version = "1.3" }
rustc-hash = { default-features = false, version = "2.1" }
actix-web = { default-features = false, version = "4.12" }
tracing = { default-features = false, version = "0.1" }
slotmap = { default-features = false, version = "1.1" }
futures = { default-features = false, version = "0.3" }
pin-project-lite = { default-features = false, version = "0.2" }
send_wrapper = { default-features = false, version = "0.6" }
tokio-test = { default-features = false, version = "0.4" }
html-escape = { default-features = false, version = "0.2" }
proc-macro-error2 = { default-features = false, version = "2.0" }
const_format = { default-features = false, version = "0.2" }
gloo-net = { default-features = false, version = "0.6" }
url = { default-features = false, version = "2.5" }
tokio = { default-features = false, version = "1.49" }
base64 = { default-features = false, version = "0.22" }
cfg-if = { default-features = false, version = "1.0" }
wasm-bindgen-futures = { default-features = false, version = "0.4" }
tower = { default-features = false, version = "0.5" }
proc-macro2 = { default-features = false, version = "1.0" }
serde = { default-features = false, version = "1.0" }
parking_lot = { default-features = false, version = "0.12" }
axum = { default-features = false, version = "0.8" }
serde_qs = { default-features = false, version = "0.15" }
syn = { default-features = false, version = "2.0" }
xxhash-rust = { default-features = false, version = "0.8" }
paste = { default-features = false, version = "1.0" }
quote = { default-features = false, version = "1.0" }
web-sys = { default-features = false, version = "0.3" }
js-sys = { default-features = false, version = "0.3" }
rand = { default-features = false, version = "0.9" }
serde-lite = { default-features = false, version = "0.5" }
tokio-tungstenite = { default-features = false, version = "0.28" }
serial_test = { default-features = false, version = "3.3" }
erased = { default-features = false, version = "0.1" }
glib = { default-features = false, version = "0.21" }
async-trait = { default-features = false, version = "0.1" }
anyhow = { default-features = false, version = "1.0" }
walkdir = { default-features = false, version = "2.5" }
actix-ws = { default-features = false, version = "0.3" }
tower-http = { default-features = false, version = "0.6" }
prettyplease = { default-features = false, version = "0.2" }
inventory = { default-features = false, version = "0.3" }
config = { default-features = false, version = "0.15" }
camino = { default-features = false, version = "1.2" }
ciborium = { default-features = false, version = "0.2" }
bitcode = { default-features = false, version = "0.6" }
multer = { default-features = false, version = "3.1" }
leptos-spin-macro = { default-features = false, version = "0.2" }
sledgehammer_utils = { default-features = false, version = "0.3" }
sledgehammer_bindgen = { default-features = false, version = "0.6" }
wasm-streams = { default-features = false, version = "0.5" }
rkyv = { default-features = false, version = "0.8" }
temp-env = { default-features = false, version = "0.3" }
uuid = { default-features = false, version = "1.20" }
bytes = { default-features = false, version = "1.11" }
http = { default-features = false, version = "1.4" }
regex = { default-features = false, version = "1.12" }
drain_filter_polyfill = { default-features = false, version = "0.1" }
tempfile = { default-features = false, version = "3.24" }
futures-lite = { default-features = false, version = "2.6" }
log = { default-features = false, version = "0.4" }
percent-encoding = { default-features = false, version = "2.3" }
async-executor = { default-features = false, version = "1.13" }
const-str = { default-features = false, version = "1.1" }
http-body-util = { default-features = false, version = "0.1" }
hyper = { default-features = false, version = "1.8" }
postcard = { default-features = false, version = "1.1" }
rmp-serde = { default-features = false, version = "1.3" }
reqwest = { default-features = false, version = "0.13" }
tower-layer = { default-features = false, version = "0.3" }
attribute-derive = { default-features = false, version = "0.10" }
insta = { default-features = false, version = "1.46" }
codee = { default-features = false, version = "0.3" }
actix-http = { default-features = false, version = "3.11" }
wasm-bindgen-test = { default-features = false, version = "0.3" }
rustversion = { default-features = false, version = "1.0" }
getrandom = { default-features = false, version = "0.4" }
actix-files = { default-features = false, version = "0.6" }
async-lock = { default-features = false, version = "3.4" }
base16 = { default-features = false, version = "0.2" }
digest = { default-features = false, version = "0.10" }
sha2 = { default-features = false, version = "0.10" }
subsecond = { default-features = false, version = "0.7" }
dioxus-cli-config = { default-features = false, version = "0.7" }
dioxus-devtools = { default-features = false, version = "0.7" }
wasm_split_helpers = { default-features = false, version = "0.2" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.metadata.cargo-all-features]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]
max_combination_size = 2

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(leptos_debuginfo)',
  'cfg(erase_components)',
] }
