[package]
name = "throw_error"
version = "0.2.0-gamma2"
authors = ["Greg Johnston"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/leptos-rs/leptos"
description = "Utilities for wrapping, throwing, and catching errors."
rust-version.workspace = true
edition.workspace = true

[dependencies]
pin-project-lite = "0.2.14"
