[package]
name = "throw_error"
version = "0.4.0-beta"
authors = ["Greg Johnston"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/leptos-rs/leptos"
description = "Utilities for wrapping, throwing, and catching errors."
rust-version.workspace = true
edition.workspace = true

[dependencies]
pin-project-lite = { workspace = true, default-features = true }

[dev-dependencies]
anyhow.workspace = true
