[package]
name = "any_spawner"
version = "0.3.0"
authors = ["Greg Johnston"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/leptos-rs/leptos"
description = "Spawn asynchronous tasks in an executor-independent way."
edition.workspace = true

[dependencies]
async-executor = { version = "1.13.1", optional = true }
futures = { workspace = true, default-features = true }
glib = { version = "0.20.9", optional = true }
thiserror = { workspace = true , default-features = true }
tokio = { optional = true, default-features = false, features = [
  "rt",
] , workspace = true }
tracing = { optional = true , workspace = true, default-features = true }
wasm-bindgen-futures = { optional = true , workspace = true, default-features = true }

[dev-dependencies]
futures-lite = { version = "2.6.0", default-features = false }
tokio = { default-features = false, features = [
  "rt",
  "macros",
  "time",
] , workspace = true }
wasm-bindgen-test = { version = "0.3.50" }
serial_test = "3.2.0"

[features]
async-executor = ["dep:async-executor"]
tracing = ["dep:tracing"]
tokio = ["dep:tokio"]
glib = ["dep:glib"]
wasm-bindgen = ["dep:wasm-bindgen-futures"]
futures-executor = ["futures/thread-pool", "futures/executor"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-all-features]
denylist = ["tracing"]
max_combination_size = 2
