[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { path = "../leptos", default-features = false, features = ["ssr"] }
sycamore = { version = "0.8", features = ["ssr"] }
yew = { git = "https://github.com/yewstack/yew", features = ["ssr"] }
tokio-test = "0.4"
miniserde = "0.1"
gloo = "0.8"
uuid = { version = "1", features = ["serde", "v4", "wasm-bindgen"] }
wasm-bindgen = "0.2"
log = "0.4"
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1", features = ["derive", "rc"]}
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
	"Window",
	"Document",
	"HtmlElement",
	"HtmlInputElement"
]