[package]
name = "hydration_context"
version = "0.3.0"
authors = ["Greg Johnston"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/leptos-rs/leptos"
description = "Utilities for sharing data between web servers and client-side web applications."
rust-version.workspace = true
edition.workspace = true

[dependencies]
throw_error = { workspace = true }
or_poisoned = { workspace = true }
futures = { workspace = true, default-features = true }
serde = { features = ["derive"] , workspace = true, default-features = true }
wasm-bindgen = { workspace = true, optional = true , default-features = true }
js-sys = { optional = true , workspace = true, default-features = true }
pin-project-lite = { workspace = true, default-features = true }

[features]
browser = ["dep:wasm-bindgen", "dep:js-sys"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(leptos_debuginfo)'] }
